samples/_failures_safe/1761696937_e1ab79_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e90b514.c: In function ‘main’:
./samples/SAFE/__tmp_1e90b514.c:145:12: error: missing terminating " character
  145 |     printf("Bounding
      |            ^~~~~~~~~
./samples/SAFE/__tmp_1e90b514.c:145:5: error: expected expression at end of input
  145 |     printf("Bounding
      |     ^~~~~~
./samples/SAFE/__tmp_1e90b514.c:145:5: error: expected declaration or statement at end of input
